--- a/templates/safety_questionnaire_feedback.html
+++ b/templates/safety_questionnaire_feedback.html
@@ -10,8 +10,21 @@
         <li> Your grandparent {{ session['grandparent_name'] }} 's age is {{ session['grandparent_age'] }}</li>
         <li> Your grandparent {{ session['grandparent_name'] }} 's house has adequate light in the following area {{ session['adequate_light'] }}</li>
         <li> Your grandparent {{ session['grandparent_name'] }} 's house has night light in the following area {{ session['night_light'] }}</li>
-        <li> {{ session['clear_path'] }} You think your grandparent {{ session['grandparent_name'] }} 's house has a clear, unobstructed path through the room</li>
-        <li> {{ session['floors_condition'] }} You think your grandparent {{ session['grandparent_name'] }} 's house there is wood floors slip resistant and carpets in good condition with non-slip backing (not frayed or turned up, no upturned corner that someone could trip over)m</li>  
+        <li> {{ session['clear_path'] }} ,You think your grandparent {{ session['grandparent_name'] }} 's house has {{ session['clear_path'] }} clear, unobstructed path through the room</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['floors_condition'] }} wood floors slip resistant and carpets in good condition with non-slip backing (not frayed or turned up, no upturned corner that someone could trip over)</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} has {{ session['difficluties_walking'] }} difficluties in walking by himself/herself</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['non_slip'] }} non-slip/non-skid floor surface even when wet in the Bathroom and Laundry</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['grab_bars'] }} grab bars in the Bathroom as he/she needed</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['telephone_reach'] }} a telephone within reach of the bed? Are telephones positioned low enough so they can be reached if a fall occurs</li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} have {{ session['difficulties_chairs'] }} difficulties in getting up from chairs </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} used items {{ session['items_reached'] }} visible and easily reached in the Kitchen </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['handrails_needed'] }} handrails for stairs and steps in the house as needed for your grandparent </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['smoke_detectors'] }} smoke detectors installed and working on every level of the home, outside sleeping areas and inside bedrooms </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['fire_extinguisher'] }} fire extinguisher in the kitchen and not expire </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }}  has {{ session['contact_information'] }} contact information to someone in an emergency and {{ contact_information'] }} emergency numbers posted on or near all telephones </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there {{ 'session['key_entry'] }} a safe place outside to hide a key to the house for emergency entry </li>
+        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ 'exit_plan'] }} an emergency exit plan </li>
+        
         
     </ul>
   {% else %}
