--- a/templates/safetquestionnairepage.html
+++ b/templates/safetquestionnairepage.html
@@ -138,6 +138,9 @@
                             <br>
                             <p><img src="static/images/Photos/kids/Artboard 16.png" class="img-responsive"
                                     alt="detective image" width="20%"></p>
+			    <br>
+                            <br>
+                            <br>
 				
 			    {{ form.hidden_tag() }}
                             {{ form.grandparent_name.label}}
@@ -150,9 +153,8 @@
                             <br>
                             <br>
                             <br>
-                            <p><img src="static/images/grandparent.png" class="img-responsive"
-                                    alt="grandparent image" width="20%"></p>
-
+                            <p><img src="static/images/grandparent.jpg" class="img-responsive" 
+				    alt="grandparent image" width="20%"></p>
                             <br>
                             <br>
                             {{ form.grandparent_gender.label}}
