--- a/templates/safetquestionnairepage.html
+++ b/templates/safetquestionnairepage.html
@@ -185,7 +185,7 @@
                             {{ form.non_slip.label}}{{form.non_slip}}
                             <br>
 			    <br>
-                            {{ form.grab_bars}}{{form.grab_bars}}
+                            {{ form.grab_bars.label}}{{form.grab_bars}}
                             <br>
                             <br>
                             {{ form.telephone_reach.label}}{{form.telephone_reach}}
