--- a/templates/safety_questionnaire_feedback.html
+++ b/templates/safety_questionnaire_feedback.html
@@ -2,29 +2,29 @@
 {% block content %}
   <body>
     {% if session['kid_name']  %}
-    <h3> Thank You {{ session['kid_name'] }}, here is the information you have given us </h3>
+    <h3> Thank You {{ session['kid_name'] }} for assisting your grandparent {{ session['grandparent_name'] }} with his/her home safety check. Here are the recommendations for you and your grandparent. </h3>
     <ul>
-        <li> Your name is {{ session['kid_name'] }}</li>
-        <li> You are assisting your grandparent {{ session['grandparent_name'] }} with his/her home safety check </li>
-        <li> Your grandparent {{ session['grandparent_name'] }} 's gender is {{ session['grandparent_gender'] }}</li>
-        <li> Your grandparent {{ session['grandparent_name'] }} 's age is {{ session['grandparent_age'] }}</li>
-        <li> Your grandparent {{ session['grandparent_name'] }} 's house has adequate light in the following area {{ session['adequate_light'] }}</li>
-        <li> Your grandparent {{ session['grandparent_name'] }} 's house has night light in the following area {{ session['night_light'] }}</li>
-        <li> {{ session['clear_path'] }} ,You think your grandparent {{ session['grandparent_name'] }} 's house has {{ session['clear_path'] }} clear, unobstructed path through the room</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['floors_condition'] }} wood floors slip resistant and carpets in good condition with non-slip backing (not frayed or turned up, no upturned corner that someone could trip over)</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} has {{ session['difficluties_walking'] }} difficluties in walking by himself/herself</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['non_slip'] }} non-slip/non-skid floor surface even when wet in the Bathroom and Laundry</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['grab_bars'] }} grab bars in the Bathroom as he/she needed</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ session['telephone_reach'] }} a telephone within reach of the bed? Are telephones positioned low enough so they can be reached if a fall occurs</li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} have {{ session['difficulties_chairs'] }} difficulties in getting up from chairs </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} used items {{ session['items_reached'] }} visible and easily reached in the Kitchen </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['handrails_needed'] }} handrails for stairs and steps in the house as needed for your grandparent </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['smoke_detectors'] }} smoke detectors installed and working on every level of the home, outside sleeping areas and inside bedrooms </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} there are {{ session['fire_extinguisher'] }} fire extinguisher in the kitchen and not expire </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }}  has {{ session['contact_information'] }} contact information to someone in an emergency and {{ contact_information'] }} emergency numbers posted on or near all telephones </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there {{ 'session['key_entry'] }} a safe place outside to hide a key to the house for emergency entry </li>
-        <li> You think your grandparent {{ session['grandparent_name'] }} 's house there is {{ 'exit_plan'] }} an emergency exit plan </li>
+        <li> Make sure adequate lighting in Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </li>
+        <li> Make sure night-lights or signs giving directions to Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </li>
+        <li> Make sure a clear, unobstructed path through the room (no clutter, cords, wires, baskets or other things to trip over). Check for broken pavers and ask for help to have any raised pavers re-laid. Keep paths free of moss and leaves, and remove any obstacles such as gardening tools, hoses and small pots.  </li>
+        <li> Make sure wood floors slip resistant and carpets in good condition, area rugs have non-slip backing. </li>
+        <li> Recommend your grandparent use of walking stick or walker if necessary </li>
+        <li> The flooring non-slip/non-skid products are required to purchase. A non-skid bathmat is required in the bathtub. </li>
+        <li> Grab rails need to installed in the bathroom as needed. Make sure there are sturdy grab bars in the tub, shower, toilet, if needed. </li>
+        <li> Make sure there is a telephone within reach of the bed, and telephones positioned low enough so they can be reached if a fall occurs. </li>
+        <li> Making sure supports (assistive walking devices cane, walker, wheelchair within reach of them) for them, if needed. </li>
+        <li> Help arrange the items in kitchen so it will be easily to reach the items that need to use frequently. Place them between hip and eye level. </li>
+        <li> Ask for help in requiring additional handrails. Handrail height should not be less than 900mm or more than 1100mm. Make sure there are handrails on at least one side of all steps and stairways. Ideally, there should be handrails on both sides of steps and stairways. </li>
+        <li> Make sure smoke detectors installed and working on every level of the home, outside sleeping areas and inside bedrooms. </li>
+        <li> Make sure there is a fire extinguisher in the kitchen. If expire then replace it. </li>
+        <li> Write down at least one emergency contact number of family member or friend of grandparent and posted on or near all telephones. </li>
+        <li> Discuss with your grandparent and choose a safe place outside to hide a key to the house for emergency entry. </li>
+        <li> Discuss with family member for creating an emergency exit plan. </li>
+        <li> You can look for additional infromation to create an emergency exit plan through following link </li>
+        <li> https://www.fire.nsw.gov.au/page.php?id=883 or https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm </li>
         
+        
+    
         
     </ul>
   {% else %}
