--- a/templates/safety_questionnaire_feedback.html
+++ b/templates/safety_questionnaire_feedback.html
@@ -2,8 +2,8 @@
 {% block content %}
   <body>
     {% if session['kid_name']  %}
-    {% if session['grandparent_name']  %}
-    <h3> Thank You {{ session['kid_name'] }} for assisting your grandparent {{ session['grandparent_name'] }} with his/her home safety check. Here are the recommendations for you and your grandparent. </h3>
+    
+    <h3> Thank You {{ session['kid_name'] }} for assisting your grandparent with his/her home safety check. Here are the recommendations for you and your grandparent. </h3>
 
         <h3> Make sure adequate lighting in Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </h3>
         <h3> Make sure night-lights or signs giving directions to Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </h3>
