--- a/templates/safetquestionnairepage.html
+++ b/templates/safetquestionnairepage.html
@@ -115,7 +115,7 @@
                 <div class="col-sm-12">
                     <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h1 class="title">House Safety Assesment</h1>
-                        <p> Before Completing this questionnaire assesment, please sit with your grandparent and answer the questions together. 
+                        <p> Before Completing this questionnaire assesment, please sit with your grandparent and answer the questions together.
 				Hope you can enjoy and play with it.
                         </p>
                         <p><img src="static/images/detective.jpg" class="img-responsive" alt="detective image"
@@ -141,19 +141,19 @@
 			    <br>
                             <br>
                             <br>
-				
+
 			    {{ form.hidden_tag() }}
                             {{ form.grandparent_name.label}}
 
                             <br>
                             <div class="row">
-				
+
 				{{form.grandparent_name(class = "", placeholder="Enter Your Grandparent's Name: ")}}
                             </div>
                             <br>
                             <br>
                             <br>
-                            <p><img src="static/images/grandparent.jpg" class="img-responsive" 
+                            <p><img src="static/images/grandparent.jpg" class="img-responsive"
 				    alt="grandparent image" width="20%"></p>
                             <br>
                             <br>
@@ -179,7 +179,7 @@
                             {{ form.floors_condition.label}}{{form.floors_condition}}
                             <br>
                             <br>
-			    {{ form.difficluties_walking.label}}{{form.difficluties_walking}}
+			    {{ form.difficulties_walking.label}}{{form.difficulties_walking}}
                             <br>
                             <br>
                             {{ form.non_slip.label}}{{form.non_slip}}
