--- a/templates/safety_questionnaire_answers.html
+++ b/templates/safety_questionnaire_answers.html
@@ -19,7 +19,7 @@
         <th scope="col"> Night light </th>
         <th scope="col"> Clear path</th>
         <th scope="col"> Floors condition</th>
-        <th scope="col"> Difficluties walking</th>
+        <th scope="col"> Difficulties walking</th>
         <th scope="col"> Non slip</th>
         <th scope="col"> Grab bars</th>
         <th scope="col"> Telephone reach</th>
@@ -43,7 +43,7 @@
         <td> {{ data.night_light }}</td>
         <td> {{ data.clear_path }}</td>
         <td> {{ data.floors_condition }}</td>
-        <td> {{ data.difficluties_walking }}</td>
+        <td> {{ data.difficulties_walking }}</td>
         <td> {{ data.non_slip }}</td>
         <td> {{ data.grab_bars }}</td>
         <td> {{ data.telephone_reach }}</td>
@@ -54,8 +54,8 @@
         <td> {{ data.fire_extinguisher }}</td>
         <td> {{ data.contact_information }}</td>
         <td> {{ data.key_entry }}</td>
-        <td> {{ data.exit_plan }}</td> 
-        
+        <td> {{ data.exit_plan }}</td>
+
 
         </tr>
         {% endfor %}
