--- a/templates/safety_questionnaire_feedback.html
+++ b/templates/safety_questionnaire_feedback.html
@@ -1,36 +1,89 @@
 {% extends "layout.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Home | Care 360</title>
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/animate.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/lightbox.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
+    <!-- [if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+    <![endif] -->
+    <link rel="shortcut icon" href="static/images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144"
+        href="static/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"
+        href="static/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="static/images/ico/apple-touch-icon-57-precomposed.png">
+</head>
 {% block content %}
   <body>
     {% if session['kid_name']  %}
-    
-    <h3> Thank You {{ session['kid_name'] }} for assisting your grandparent with his/her home safety check. Here are the recommendations for you and your grandparent. </h3>
+    <h3> Thank You {{ session['kid_name'] }}, here is the information you have given us</h3>
+    <ul>
+        <li>{{ session['kid_name'] }}</li>
+        <li>{{ session['grandparent_name'] }}</li>
+        <li>{{ session['grandparent_gender'] }}</li>
+        <li>{{ session['grandparent_age'] }}</li>
+        <li>{{ session['adequate_light'] }}</li>
+        <li>{{ session['night_light'] }}</li>
+        <li>{{ session['clear_path'] }}</li>
+        <li>{{ session['floors_condition'] }}</li>
+        <li>{{ session['difficulties_walking'] }}</li>
+        <li>{{ session['non_slip'] }}</li>
+        <li>{{ session['grab_bars'] }}</li>
+        <li>{{ session['telephone_reach'] }}</li>
+        <li>{{ session['difficulties_chairs'] }}</li>
+        <li>{{ session['items_reached'] }}</li>
+        <li>{{ session['handrails_needed'] }}</li>
+        <li>{{ session['smoke_detectors'] }}</li>
+        <li>{{ session['fire_extinguisher'] }}</li>
+        <li>{{ session['contact_information'] }}</li>
+        <li>{{ session['key_entry'] }}</li>
+        <li>{{ session['exit_plan'] }}</li>
+    </ul>
 
-        <h3> Make sure adequate lighting in Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </h3>
-        <h3> Make sure night-lights or signs giving directions to Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen. </h3>
-        <h3> Make sure a clear, unobstructed path through the room (no clutter, cords, wires, baskets or other things to trip over). Check for broken pavers and ask for help to have any raised pavers re-laid. Keep paths free of moss and leaves, and remove any obstacles such as gardening tools, hoses and small pots.  </h3>
-        <h3> Make sure wood floors slip resistant and carpets in good condition, area rugs have non-slip backing. </h3>
-        <h3> Recommend your grandparent use of walking stick or walker if necessary </h3>
-        <h3> The flooring non-slip/non-skid products are required to purchase. A non-skid bathmat is required in the bathtub. </h3>
-        <h3> Grab rails need to installed in the bathroom as needed. Make sure there are sturdy grab bars in the tub, shower, toilet, if needed. </h3>
-        <h3> Make sure there is a telephone within reach of the bed, and telephones positioned low enough so they can be reached if a fall occurs. </h3>
-        <h3> Making sure supports (assistive walking devices cane, walker, wheelchair within reach of them) for them, if needed. </h3>
-        <h3> Help arrange the items in kitchen so it will be easily to reach the items that need to use frequently. Place them between hip and eye level. </h3>
-        <h3> Ask for help in requiring additional handrails. Handrail height should not be less than 900mm or more than 1100mm. Make sure there are handrails on at least one side of all steps and stairways. Ideally, there should be handrails on both sides of steps and stairways. </h3>
-        <h3> Make sure smoke detectors installed and working on every level of the home, outside sleeping areas and inside bedrooms. </h3>
-        <h3> Make sure there is a fire extinguisher in the kitchen. If expire then replace it. </h3>
-        <h3> Write down at least one emergency contact number of family member or friend of grandparent and posted on or near all telephones. </h3>
-        <h3> Discuss with your grandparent and choose a safe place outside to hide a key to the house for emergency entry. </h3>
-        <h3> Discuss with family member for creating an emergency exit plan. </li>
-        <h3> You can look for additional infromation to create an emergency exit plan through following link </h3>
-        <h3> https://www.fire.nsw.gov.au/page.php?id=883 or https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm </h3>
-        
-        
-    
-        
+    <h3> Here are the recommendations for you and your grandparent. </h3>
+    <ol>
+        <li>Make sure adequate lighting in Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen.</li>
+        <li>Make sure night-lights or signs giving directions to Bedroom, Living room, Driveway & Garage, Walkways, Stairs,  Bathroom, Laundry and Kitchen.</li>
+        <li>Make sure a clear, unobstructed path through the room (no clutter, cords, wires, baskets or other things to trip over). Check for broken pavers and ask for help to have any raised pavers re-laid. Keep paths free of moss and leaves, and remove any obstacles such as gardening tools, hoses and small pots.</li>
+        <li>Make sure wood floors slip resistant and carpets in good condition, area rugs have non-slip backing.</li>
+        <li>Recommend your grandparent use of walking stick or walker if necessary</li>
+        <li>The flooring non-slip/non-skid products are required to purchase. A non-skid bathmat is required in the bathtub.</li>
+        <li>Grab rails need to installed in the bathroom as needed. Make sure there are sturdy grab bars in the tub, shower, toilet, if needed.</li>
+        <li>Make sure there is a telephone within reach of the bed, and telephones positioned low enough so they can be reached if a fall occurs.</li>
+        <li>Making sure supports (assistive walking devices cane, walker, wheelchair within reach of them) for them, if needed.</li>
+        <li>Help arrange the items in kitchen so it will be easily to reach the items that need to use frequently. Place them between hip and eye level.</li>
+        <li>Ask for help in requiring additional handrails. Handrail height should not be less than 900mm or more than 1100mm. Make sure there are handrails on at least one side of all steps and stairways. Ideally, there should be handrails on both sides of steps and stairways.</li>
+        <li>Make sure smoke detectors installed and working on every level of the home, outside sleeping areas and inside bedrooms.</li>
+        <li>Make sure there is a fire extinguisher in the kitchen. If expire then replace it.</li>
+        <li>Write down at least one emergency contact number of family member or friend of grandparent and posted on or near all telephones.</li>
+        <li>Discuss with your grandparent and choose a safe place outside to hide a key to the house for emergency entry.</li>
+        <li>Discuss with family member for creating an emergency exit plan.</li>
+        <li>You can look for additional infromation to create an emergency exit plan through following link</li>
+        <li><a href="https://www.fire.nsw.gov.au/page.php?id=883">https://www.fire.nsw.gov.au/page.php?id=883</a> or <a href="https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm">https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm</a></li>
+    </ol>
+
+
+
+
 
   {% else %}
   <h2> please fill the questionnaire first</h2>
   <a href="{{ url_for('safety_questionnaire') }}">Go to questionnaire page</a>
   {% endif %}
   </body>
+  </html>
 {% endblock content %}
