--- a/templates/safety_questionnaire_feedback.html
+++ b/templates/safety_questionnaire_feedback.html
@@ -72,8 +72,8 @@
         <li>Write down at least one emergency contact number of family member or friend of grandparent and posted on or near all telephones.</li>
         <li>Discuss with your grandparent and choose a safe place outside to hide a key to the house for emergency entry.</li>
         <li>Discuss with family member for creating an emergency exit plan.</li>
-        <li>You can look for additional infromation to create an emergency exit plan through following link</li>
-        <li><a href="https://www.fire.nsw.gov.au/page.php?id=883">https://www.fire.nsw.gov.au/page.php?id=883</a> or <a href="https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm">https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm</a></li>
+        <li>You can look for additional infromation to create an emergency exit plan through following link<br>
+        <a href="https://www.fire.nsw.gov.au/page.php?id=883">https://www.fire.nsw.gov.au/page.php?id=883</a> or <a href="https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm">https://www.smartdraw.com/evacuation-plan/fire-escape-plan-maker.htm</a></li>
     </ol>
 
 
